# rscord

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture-diagram.d2  flake.nix  package-lock.json  package.json  tsconfig.json  vite.config.js
src-backend/: .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  compose.test.yaml  compose.yaml  example.env  flake.nix
src-backend/client-emulator/: Cargo.toml  README.md  client-emulator  many.sh
src-backend/client-emulator/src/: main.rs
src-backend/db-queries/: create_dummy_data.sql
src-backend/migrations/00000000000001_create_users/: up.sql
src-backend/migrations/00000000000002_create_sessions/: down.sql  up.sql
src-backend/migrations/00000000000003_create_verification_codes/: up.sql
src-backend/migrations/00000000000004_create_relationships/: down.sql  up.sql
src-backend/migrations/00000000000006_create_guild_members/: down.sql  up.sql
src-backend/migrations/00000000000007_create_roles/: up.sql
src-backend/migrations/00000000000008_create_members_roles/: down.sql  up.sql
src-backend/migrations/00000000000009_create_channels/: down.sql  up.sql
src-backend/migrations/00000000000009_create_private_channels/: down.sql  up.sql
src-backend/migrations/00000000000010_create_channel_members/: down.sql  up.sql
src-backend/migrations/00000000000010_create_channels_members/: down.sql  up.sql
src-backend/migrations/00000000000010_create_displayed_users/: down.sql  up.sql
src-backend/migrations/00000000000010_create_guild_channels/: down.sql  up.sql
src-backend/migrations/00000000000011_create_channel_members/: up.sql
src-backend/migrations/00000000000011_create_direct_messages/: up.sql
src-backend/migrations/00000000000011_create_displayed_users/: up.sql
src-backend/migrations/00000000000011_create_guild_messages/: up.sql
src-backend/migrations/00000000000012_create_guild_messages/: up.sql
src-backend/migrations/00000000000013_create_direct_messages/: up.sql
src-backend/migrations/00000000000013_create_guild_messages/: up.sql
src-backend/migrations/00000000000013_create_pinned_direct_messages/: down.sql
src-backend/migrations/00000000000014_create_direct_messages/: up.sql
src-backend/migrations/00000000000014_create_pinned_guild_messages/: down.sql  up.sql
src-backend/migrations/00000000000015_create_pinned_direct_messages/: down.sql  up.sql
src-backend/migrations/00000000000015_create_pinned_guild_messages/: up.sql
src-backend/migrations/00000000000016_create_pinned_direct_messages/: up.sql
src-backend/migrations/00000000000016_create_push_tokens/: down.sql  up.sql
src-backend/migrations/00000000000017_create_identity_keys/: down.sql  up.sql
src-backend/migrations/00000000000017_create_push_tokens/: up.sql
src-backend/migrations/00000000000018_create_signed_prekeys/: down.sql  up.sql
src-backend/migrations/00000000000019_create_one_time_prekeys/: down.sql  up.sql
src-backend/migrations/2026-02-12-081526-0000_create_users/: down.sql  up.sql
src-backend/migrations/2026-02-12-094254-0000_create_sessions/: down.sql  up.sql
src-backend/migrations/2026-02-12-094820-0000_create_verification_codes/: down.sql  up.sql
src-backend/migrations/2026-02-12-100635-0000_create_relationships/: down.sql  up.sql
src-backend/migrations/2026-02-12-101329-0000_create_guilds/: down.sql  up.sql
src-backend/migrations/2026-02-12-101606-0000_create_guilds_users/: down.sql  up.sql
src-backend/migrations/2026-02-12-102227-0000_create_roles/: down.sql  up.sql
src-backend/migrations/2026-02-12-102732-0000_create_members_roles/: up.sql
src-backend/migrations/2026-02-12-102732-0000_create_users_roles/: down.sql  up.sql
src-backend/migrations/2026-02-12-103054-0000_create_channels/: down.sql  up.sql
src-backend/migrations/2026-02-12-103331-0000_create_user_channels/: down.sql  up.sql
src-backend/migrations/2026-02-12-103954-0000_create_guild_channels/: down.sql  up.sql
src-backend/migrations/2026-02-12-104316-0000_create_guild_messages/: down.sql  up.sql
src-backend/migrations/2026-02-12-104316-0000_create_messages/: down.sql  up.sql
src-backend/migrations/2026-02-12-104756-0000_create_pinned_guild_messages/: down.sql
src-backend/migrations/2026-02-12-104756-0000_pinned_messages/: down.sql  up.sql
src-backend/migrations/2026-02-12-122714-0000_create_pinned_direct_messages/: up.sql
src-backend/nginx/: nginx.conf
src-backend/src/: lib.rs  main.rs  models.rs  schema.rs
src-backend/src/api/: auth.rs  auth_extractor.rs  direct_messages.rs  errors.rs  guild_messages.rs  guilds.rs  keys.rs  messages.rs  mod.rs  opaque.rs  password.rs  push_tokens.rs  relationships.rs  roles.rs  users.rs  websocket.rs
src-backend/src/crypto/: double_ratchet.rs  kdf.rs  mod.rs  x3dh.rs
src-backend/src/db/: mod.rs  models.rs  schema.rs
src-backend/src/db/models/: channels.rs  channels_members.rs  direct_messages.rs  fcm_token.rs  guild_channels.rs  guild_messages.rs  guilds.rs  keys.rs  messages.rs  mod.rs  private_channels.rs  push_tokens.rs  relationships.rs  (+3 more)
src-backend/src/fcm/: mod.rs
src-backend/tests/: api_endpoints.rs  encrypted_dm_flow.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: auth.rs  guilds.rs  messages.rs  mod.rs  push_token.rs  token.rs  ws_client.rs
(+21 files in other folders)
