[package]
name = "rscord"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rscord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notifications = { version = "0.4", features = ["push-notifications"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "default-tls", "blocking", "cookies"] }
opaque-ke = { version = "4.0.1", features = ["argon2", "std"] }
anyhow = "1.0.102"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.8.5"
